--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -1,5 +1,4 @@
-
-Thinking with Numbers - Part 2
+# Thinking with Numbers - Part 2
 
 # Objective
 
@@ -46,7 +45,7 @@ We will be looking at some fill in the blanks type puzzles here. The puzzle will
 
   
 
-Problem Statement: Correct the equation given only using the digits given
+**Problem Statement**: Correct the equation given only using the digits given
 
   
 ![](https://lh4.googleusercontent.com/txaWFjKVDgBZb4-1yldLDYnmuO7Y_VTE8TuUc6R3-FkYOpoy1ozwdmt5a_3BZyvbHo-SE1vw6Kc886qi3hByISkbzguH2ZWVimAg1SoleOvGKwPpqF-1MzUrkRZrFkH0Ns39i6CCJ1qmriEjww)  
@@ -75,7 +74,7 @@ For these problems, you have to keep in mind that
 
   
 
-Approach to Digit Challenges
+**Approach to Digit Challenges**
 
   
 
@@ -105,7 +104,7 @@ So, our problem is solved.
 
   
 
-Note: This problem has one other solution as well, try finding it.
+**Note:** This problem has one other solution as well, try finding it.
 
 (Hint: This time start with 8 as tens digit in RHS)
 
@@ -115,7 +114,7 @@ Note: This problem has one other solution as well, try finding it.
 
   
 
-Follow Up
+**Follow Up**
 
   
 
@@ -147,7 +146,7 @@ You can try to solve some other problems involving other arithmetic operations a
   
   
 
-Solution: ( 4 / 2 ) + 6 + 7 = 1 5
+**Solution: ( 4 / 2 ) + 6 + 7 = 1 5**
 
 2.  Correct the equation given only using the digits given:
     
@@ -169,7 +168,7 @@ Solution: ( 4 / 2 ) + 6 + 7 = 1 5
   
   
 
-Solution: ( 3 / 4 ) x 2 x 6 = 9
+**Solution: ( 3 / 4 ) x 2 x 6 = 9**
 
   
   
@@ -201,7 +200,7 @@ We will be looking at some fill in the blanks type puzzles here as well. This wi
   
   
 
-Problem Statement: You are given that a 3-digit code can unlock the lock along with some hints to guess the 3 digit. Your task is to identify these 3 digits in the code and you will be given a few wrong combinations with the details of why they are incorrect or correct.
+**Problem Statement:** You are given that a 3-digit code can unlock the lock along with some hints to guess the 3 digit. Your task is to identify these 3 digits in the code and you will be given a few wrong combinations with the details of why they are incorrect or correct.
 
 We will take the following sample problem for better understanding:
 
@@ -224,7 +223,7 @@ Nothing is correct
   
   
 
-Approach to Crack the Code
+**Approach to Crack the Code**
 
   
 
@@ -232,13 +231,13 @@ So, we have been given three incorrect combinations for the lock. You will use t
 
   
 
-Using the 1st combination
+**Using the 1st combination**
 
 In the first code, we can see that it has been specified that two numbers are correct and they are in their correct positions as well. So, one of the pairs out of 1,6; 1,5; 6,5 are correct and the digits in that pair are in their correct spot as well.
 
   
 
-Using the 3rd combination
+**Using the 3rd combination**
 
 At the same time, we can also check out the last combination to see what’s not possible and then use that information to cancel out the digit that is wrong. We observe that the numbers 2,6 and 4 cannot be in the code. So, we can further eliminate two of the pairs which we considered earlier because they contain 6.
 
@@ -248,7 +247,7 @@ Now, we only need to find the middle digit.
 
   
 
-Using the 2nd combination
+**Using the 2nd combination**
 
 In the 2nd combination, we observe that two numbers are correct but they are at incorrect positions. We surely know that one of those numbers is 5. So, the middle digit can be 3 or 8.
 
@@ -256,7 +255,7 @@ If you inspect a bit more, you will notice that 3 cannot be that number because 
 
   
 
-The correct code is: 1 8 5
+The correct code is: **1 8 5**
 
   
 
@@ -269,7 +268,7 @@ All in all, you have to keep in mind these points to solve these problems:
 
   
 
-Follow Up
+**Follow Up**
 
   
 
@@ -282,7 +281,7 @@ If you feel 3-digit codewords are easy for you, try giving the 4-digit one a try
 1.  Find the 3-digit code using these hints provided
     
 
-Solution: 4 6 1![](https://lh3.googleusercontent.com/N8J6xMaRrpjSL1ik_NaSsxs5mgAOvzr1EZ-L0ulKwvbUKWZVp-ws-wcg5tC-7fYKOvtzxx-j4nXNJue05WrAFqjMgjWwgzmvU-vU4UTC9SDCJb-KMgrZUJRFHUJQunRc-OBxZyTqO-mUJSDT6Q)
+**Solution: 4 6 1**![](https://lh3.googleusercontent.com/N8J6xMaRrpjSL1ik_NaSsxs5mgAOvzr1EZ-L0ulKwvbUKWZVp-ws-wcg5tC-7fYKOvtzxx-j4nXNJue05WrAFqjMgjWwgzmvU-vU4UTC9SDCJb-KMgrZUJRFHUJQunRc-OBxZyTqO-mUJSDT6Q)
 
 2.  Find the 4-digit code using the hints provided
     
@@ -290,7 +289,7 @@ Solution: 4 6 1![](https://lh3.googleusercontent.com/N8J6xMaRrpjSL1ik_NaSsxs5mgA
   
 ![](https://lh3.googleusercontent.com/OB1fXYseJjGp2cr-C43YpBIV_UB4MTwp94ZDKoffwRV4RWxdSVR5ApPfi5uivPnanWsJuknPTsD2P3q4ffifbRCf_2kbKhgqqOL-GvL2GpS_y4zravgzdmWJj38SnozrTcahAxUvaq4RDgE43g)
 
-Solution: 3 8 4 1
+**Solution: 3 8 4 1**
 
   
   
@@ -317,11 +316,11 @@ Solution: 3 8 4 1
 
 ## Kakuro Puzzle
 
-Kakuro is a logic puzzle that is often referred to as a mathematical version of the crossword puzzle you must’ve seen in newspapers. The puzzle consists of a grid with cells and some of these cells are empty and some are filled with 1 or 2 numbers. These cells with the 1 or 2 numbers tell us how to fill the empty cells and a standard Kakuro puzzle has a unique solution. And because the solution is unique, the puzzle will only involve investigation of combinations and not various permutations like Sudoku. Let’s understand the puzzle in detail.
+Kakuro is a logic puzzle that is often referred to as a **mathematical version of the crossword puzzle** you must’ve seen in newspapers. The puzzle consists of a grid with cells and some of these cells are empty and some are filled with 1 or 2 numbers. These cells with the 1 or 2 numbers tell us how to fill the empty cells and a standard Kakuro puzzle has a unique solution. And because the solution is unique, the puzzle will only involve investigation of combinations and not various permutations like Sudoku. Let’s understand the puzzle in detail.
 
   
 
-Problem Statement: Fill in the empty cells in the given grid using the instructions below:![](https://lh6.googleusercontent.com/T5NBaANUIQ62uERLViawQ_LL-KD5ItGAn6msFB7PxGVHbs3722AzVIAEPOCpHYcSXATGn7x78D9Un4hfctLC7CghdGYFNR2FsFyyp3Og0op5o_-IV_He0RQCYbhk-XkjvlePxcxaI_p1zYGHUg)
+**Problem Statement**: Fill in the empty cells in the given grid using the instructions below:![](https://lh6.googleusercontent.com/T5NBaANUIQ62uERLViawQ_LL-KD5ItGAn6msFB7PxGVHbs3722AzVIAEPOCpHYcSXATGn7x78D9Un4hfctLC7CghdGYFNR2FsFyyp3Og0op5o_-IV_He0RQCYbhk-XkjvlePxcxaI_p1zYGHUg)
 
   
   
@@ -340,11 +339,11 @@ Problem Statement: Fill in the empty cells in the given grid using the instructi
 
 We have already discussed the importance of understanding the problem/puzzle and the constraints that are specified before rushing in to approach the problem. So, let’s understand what exactly has to be filled in the empty cells. As you might have observed, there are three types of cells in the puzzle and those are:
 
-1.  Barred cells: These are the cells not involved in the puzzle.
+1.  **Barred cells**: These are the cells not involved in the puzzle.
     
-2.  Filled cells(consisting of one or two numbers)
+2. **Filled cells**(consisting of one or two numbers)
     
-3.  Empty Cells: These are the cells that have to be filled to solve the puzzle.
+3. **Empty Cells:** These are the cells that have to be filled to solve the puzzle.
     
 
   
@@ -356,7 +355,7 @@ The filled cells contain a diagonal slash which divides them into two halves, an
 -   For a column, the sum of the numbers in that column must be equal to the number immediately above the start of that column of cells
     
 
-Approach to solve Kakuro
+**Approach to solve Kakuro**
 
 Let us now try to solve the sample puzzle we have taken. Here, first of all you can observe that there are a total of 4 rows and 4 columns. Now, to start filling the cells, you should consider the rows that have only one possible combination to fill them. For example, the first row requires a sum of 3 from two cells which is only possible with the numbers 1 and 2.
 
@@ -396,7 +395,7 @@ Similarly, the other cells can be filled as follows:
   
   
 
-Follow Up
+**Follow Up**
 
   
 
@@ -445,7 +444,7 @@ Solve this Kakuro puzzle:![](https://lh5.googleusercontent.com/1DgDmMEL44nfic7ZJ
   
   
 
-End-of-the-lesson Assessment
+## End-of-the-lesson Assessment
 
   
 
