--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
@@ -1,15 +1,14 @@
-
-Thinking with visuals - Part 2
+# Thinking with visuals - Part 2
 
   
 
-Lesson Objective:
+## Lesson Objective:
 
 In this lesson you will learn how to solve various visual and thinking question with logical analysis and thinking
 
   
 
-Why is solving visual and thinking questions important?
+**Why is solving visual and thinking questions important?**
 
   
 
@@ -17,7 +16,7 @@ The way you will use to solve such questions, will enhance your thinking and wil
 
   
 
-About the lesson:
+## About the lesson:
 
   
 
@@ -39,29 +38,29 @@ Here, basically we will be dealing with various types of visual, logical and rea
   
   
 
-Missing Terms:
+## Missing Terms:
 
   
 
-What are they?
+**What are they?**
 
 These are the questions in which you will be given some images and a missing area, and you have to predict what can be placed in place of the blank area that fits best among all options and follow the trend others are following.
 
   
 
-Way of thinking and dealing with such questions?
+**Way of thinking and dealing with such questions?**
 
 As you can see, it's looking more like a hight level thinking and visualisation type of question. So, the only way to solve such problems is to see what the given part of the image is doing and just do the same in order to achieve the missing part.
 
   
 
-Example 1:
+**Example 1:**
 
 ![](https://lh6.googleusercontent.com/fgoTLeKXGjjGXwmf44ehVTxA3B4K9HwSpxFZu_UTnEr7JjDcYPSPpAkfRPQcrfkuT4iXc6w-4W6HwDzWgIsmGk3AJa1LuQXfqKMuWm-NRHhmBMKSbjkZyJaA2F76sApy6foSoaEQ3KQnmhDtYg)
 
   
 
-How to approach:
+**How to approach:**
 
 Yes, you are thinking right. Just follow the steps followed in given part of the image blindly and you will get the correct answer. Let's discuss example 1, here you can see that we have 3 rows and 3 columns and the right-bottom most cell is missing from it and we have to predict that. So, try to see in the first 2 rows, what are they doing. What they are doing is, if they have something in common, they are removing that and if they have something different they are adding that in the final output. Or another way to visualise this is just remove the overlapping part from both of the figures and you will get the correct final output.
 
@@ -76,13 +75,13 @@ Yes, you are thinking right. Just follow the steps followed in given part of the
   
   
 
-Follow on:
+**Follow on:**
 
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
 
-Follow on questions:
+**Follow on questions:**
 
   
 
@@ -107,7 +106,7 @@ Follow on questions:
   
   
 
-Solution to follow on questions:
+**Solution to follow on questions:**
 
   
 
@@ -123,28 +122,28 @@ Solution to follow on questions:
 
   
 
-Colouring Patterns:
+## Colouring Patterns:
 
-What are they?
+**What are they?**
 
 These are the equations consisting of various images and having either white,grey or green colour in the circles and you have to predict the colour of circles in the figures given in the last row, below black line.
 
   
 
-Way of thinking and dealing with such questions?
+**Way of thinking and dealing with such questions?**
 
 As you can see, it's looking more like a conditional based question asking you to check various conditions before coming to a conclusion. So, try to identify what speciality a figure is having under the same colour and just take note of that and while answering the query images below and you will get the correct answer.
 
   
 
-Example 1:
+**Example 1:**
 
 ![](https://lh4.googleusercontent.com/ncybJ4MKcyBnzEKl1xbRKbbQ2XkCq946JDl_O7T692I9ZnCMTYzX_kJvgEZ_gPsxD1ArYMgu20hYWLHaOY-RW9Ic9_5jIxeD2v35UeMPPysW9IdxEaiAYUKNiRrJgpZULU2ClQJ_0M4dM5cDaQ)
 
   
   
 
-How to approach:
+**How to approach:**
 
 Yes, you are thinking right. Just note down various conditions the image has for similar colours. Lets dry run this idea, for the first example. Just, visualise the content of the boxes having green colour. You will get to know all those boxes which have numerical values in range 5 to 9 are coloured as green, while those boxes which have numerical values in range 0 to 4 have colour as grey. Now we just noted the conditions on a paper. Now, let's use them to answer queries. 1st box have all numbers in range 5 to 9 so it will be green, 2nd and 3rd box have all numerical values in range 0 to 4 so colour will be grey and in 4th box, numerical values lie in range 5 to 9, so it will be assigned with green colour, and kudos you got the correct answer.
 
@@ -158,7 +157,7 @@ Yes, you are thinking right. Just note down various conditions the image has for
 
   
 
-Follow on:
+**Follow on:**
 
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
@@ -176,7 +175,7 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
   
   
 
-Follow on questions and solution:
+**Follow on questions and solution:**
 
   
   
@@ -218,28 +217,28 @@ Follow on questions and solution:
   
   
 
-Logic First, Code next:
+## Logic First, Code next:
 
   
 
-What are they?
+**What are they?**
 
 In this session we will try to analyse the question and will try to build a logic so that we can get the right output.
 
   
   
 
-Way of thinking and dealing with such questions?
+**Way of thinking and dealing with such questions?**
 
 The key way to start attempting such questions is to first understand what question is asking and what constraints it has. Here in the 1st example, the question is asking you, for a given seat no. print the type of birth it is using some mathematical concepts. Now, the best way to attempt such problems is that they repeat their pattern at some instance of time. Just try to visualise the pattern, question is following. Is it repeating the same pattern after a few number of steps, if yes then try to get an answer out of that.
 
   
 
-Example 1:
+**Example 1:**
 
 ![](https://lh4.googleusercontent.com/NBjxH4QpTnjr3YM5nvCDVGUZkwawoF_heWIGJZafwh_E5lQv-9C5RE_ocD55zaswGnbKLGQ455Y_eFkoiJMweDCQnqswynkZ_Bl1f2fNKHMvWmwaUo0aVLeRrVoFim_dtGgAxiTZgqD_Vd0WAQ)
 
-How to approach:
+**How to approach:**
 
 Now, what we can see here is, the total number of distinct types of seats are 8, means after 8 seats, it will repeat the same pattern again and again. And if it is repeating the same pattern after each leap of 8, can we say that for every possible remainder of (seat no.)/(8), we will get the same output. Yes it is.
 
@@ -276,7 +275,7 @@ Here seat 1 is lower berth so as per our assumption seat (8+1) will also be lowe
 
   
 
-Follow on:
+**Follow on:**
 
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
@@ -291,7 +290,7 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
   
   
 
-Follow on questions and solution:
+**Follow on questions and solution:**
 
   
 
@@ -303,24 +302,24 @@ Follow on questions and solution:
 
   
 
-Goal it:
+## Goal it:
 
   
 
-What are they?
+**What are they?**
 
 A figure will be given in these questions. The various rectangular boxes are like obstacles. And there are 2 circles in the figure. You have to tell various steps followed up by any of the balls to reach another ball. You can shift the positions of the obstacles left-right and up-down.
 
   
   
 
-Way of thinking and dealing with such questions?
+**Way of thinking and dealing with such questions?**
 
 As, you can see, it's looking more like a problem asking you to check various possible moves, and you have to output that set of moves which will bring both circles to a single location. Now, the best way to solve such problems is, always try to decrease some distance between both the balls in each move, by moving obstacles. Move obstacles in such a way that it will make the ball reach the correct destination.
 
   
 
-Example 1:
+**Example 1:**
 
   
 
@@ -328,7 +327,7 @@ Example 1:
 
   
 
-How to approach:
+**How to approach:**
 
 Yes, you are thinking right. Just think greedly, how can you do that? I had given you some ideas to approach such problems, now it's time to dry run that on the 1st example. Here, the 1st ball is in 1st row and target position is in the last row. Now the ball cannot move down as of now as there is a brown coloured obstacle. So, shift the brown obstacle to the left end and move the ball to coordinate (2,4) and again move the brown block to the top most row. Now, the 2nd row is fully empty, but there is a yellow obstacle in the 3rd row, so shift the yellow obstacle left end and now you can see, we have a clear way to the goal and yes we reached the target.
 
@@ -339,13 +338,13 @@ Yes, you are thinking right. Just think greedly, how can you do that? I had give
 
   
 
-Follow on:
+**Follow on:**
 
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
 
-Follow on questions and solution:
+**Follow on questions and solution:**
 
   
   
@@ -363,7 +362,7 @@ Follow on questions and solution:
   
   
 
-Take Home assignment
+## Take Home assignment
 
   
 ![](https://lh3.googleusercontent.com/skJoOefvkLndW6WBThKifLov5OmgVd1xNYtcM0djh7ev1OHjSvD6866Op-W5EXzMKK8xce7meddBYmzHnZlIFJcz29D_103vAOAUDtcbTTCn-FXJeJ9mejXQYIg_ssebudXpLjwy0ng2C1djhg)
