--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/04-Thinking-with-visuals.mdx
@@ -1,15 +1,15 @@
 
-Thinking with visuals - Part 1
+# Thinking with visuals - Part 1
 
   
 
-Lesson Objective:
+## Lesson Objective:
 
 In this lesson you will learn how to solve various visual and thinking question with logical analysis and thinking
 
   
 
-Why is solving visual and thinking questions important?
+## Why is solving visual and thinking questions important?
 
   
 
@@ -17,7 +17,7 @@ The way you will use to solve such questions, will enhance your thinking and wil
 
   
 
-About the lesson:
+## About the lesson:
 
   
 
@@ -40,17 +40,17 @@ Here, basically we will be dealing with various types of visual, logical and rea
   
   
 
-Picture equations:
+## Picture equations:
 
   
 
-What are they?
+**What are they?**
 
 These are the equations consisting of images of different objects as variables and you have to figure out how much value that particular image object is containing.
 
   
 
-Way of thinking and dealing with such questions?
+**Way of thinking and dealing with such questions?**
 
 As you can see, it's looking more like a mathematical problem, which is asking you to solve some equations. Now, you all might have studied how to solve multivariable equations during your school days, just try to think in that particular way.
 
@@ -58,69 +58,69 @@ As you can see, it's looking more like a mathematical problem, which is asking y
 
 Example 1:
 
-![](https://lh3.googleusercontent.com/MrgF5_wkA4NBqlGBD-d_-P2IOyHxOROcylvvk9MOkZguP4G_mRZ2TOg_k9Gxisfxo8tCm18ILMGFFCw3MJzHgnON_3UlGQRuCdM93aPOLonxCKUetiP0TW0fQYwRvbKHHhoWVH4gfRIcM-ii7A)
+![](https://lh6.googleusercontent.com/N_IGgcDUd4GS6Sd6_aOWRkapVwDTR1BJ8t2dLDreDVLIqdKSBHKdQ-DMnEDUVJK1qchHbNGHkJOkolR6amou1HWoW5n7QrBuowvjw2IMprAJDd-F1dXdc0wRftsPBjxEuVPv40XU-IzLl-xGhA)
 
   
 
-How to approach:
+**How to approach:**
 
 Yes, you are thinking right. Just assign a unique English character to to same type of objects. In example 1, I am taking blue box as ‘B’, red box as ‘R’ and green box as ‘G’ (You can choose any variable name as per your choice) and just write down on the paper, the equations, which you are getting now. And just solve them in the manner you used to solve during your 10th class and after you get the values for all variables, substitute the values of variables into the object image to which that variable is pointing.
 
   
 
-![](https://lh4.googleusercontent.com/gkvaBqhnimZAqJkeSZTtgps3WSEc1b6BNE2UBh2JFZHNLgjGfx0A0DS1Py70CgNtUb8r5uUCLeReI4HZzegBZkvSSx0_qN8yOqYKB4RyOgo20fPxpr4oXQuzeTAKkOpH0icO_XqZGaPEZc8NrA)
+![](https://lh4.googleusercontent.com/pHVN-_8hionu50rzHhKeuZshdeg82pvZcZN2Jr3mzNEf_mg34vCpDeYOISkjLWIUMoM3yEdaPsXP4Zg6JNIFMD4oHZopFhV-fK-tDMKfs6_uJ953qCvV_O1GPnIYaEL_f_Zngg8GcwNrigVxCA)
 
-Follow on:
+**Follow on:**
 
 Now try to solve remaining examples on you own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
 
-Follow on Questions:
+**Follow on Questions:**
 
   
 
-![](https://lh3.googleusercontent.com/IAF1mjHmWA7dQ9SDI7FE9YNahEiO3_OdM6MRcKjLWEFhv1tTVTxhCL5WG82VukKvEG82jEIvzAi8rhSKkV_QbJnR2QiLEZan8BlGrtvwWXntfCaqxIi6h_w9iMA3Y87SmdpJ_9NPOsLfpNso8Q)
+![](https://lh5.googleusercontent.com/yj5OFtAdCf2IVZ9DIYDQi7NZ_iNQmpDXS-2aLwWFvPqyZawZc8HVQhXydLelJNn65aYDCRXJdauQzta9A_K69s8-AfH7VztCzFGLEoZrPCq8zFbEOiUN_Pv9KEcck6T9eTBN4_2dWaTqcfP75w)
 
   
   
 
-![](https://lh4.googleusercontent.com/89PLC_hBPZZOWNQHpKcX4AiJa6bEappfzO7sZdnj34UtKE26Dz0rdZI2qoJukYFg81Vw1Vd09MUUszHvy0eI701Ks--T0pEvofDPcMWtndng7tFRXU_7ATg2yfh8Dnbl3m1WIZpLYbE0jPXjBw)
+![](https://lh6.googleusercontent.com/qun0WifLHpst0NJkOhwpuZe7RmlP_9gkWTI3AXDyiWV-4AcH2_NavryPPiqSHKrTYxnqy2k4H1kfVYBtevp5nsjvSDjQPkr22fjfX4SugmbQFZw2zo1bTzHD3k5WVluT4ifgITU4eX4Ci0t4qQ)
 
   
 
-![](https://lh5.googleusercontent.com/axjzyz0-Q8n7sAKvH5noAWwH8VbbvkJfLP0ACTY-_d8pg9MNdQZHo0tghFtZhc3TOxqcJR-n-KlTcJYwIQgHAhrqFvckBMlT-u0wrmHrhIS6Wu8C0iAvql4SFxlhbT7eO6cS5C4OI_-t1zRI4A)
+![](https://lh5.googleusercontent.com/QnWiCKhCSsOCWZ3-IOeiDkQnnCEzrOhunvLNA1jhUOoobPVABiEvsVgMLELZoZOimZbUsf69U81shlyZwUeWlbR5ujBlcaIZeT6jEvXTgS8gaP_yVUfKa0aDR95FXaQD46rmgwL6oTFVvA7PSg)
 
-  
-  
   
   
   
   
+  
+  
 
-Solutions to follow on questions:
+**Solutions to follow on questions:**
 
   
 
-![](https://lh6.googleusercontent.com/K7O3sFQlSfEb1DEcUTNsX256IcsLG5jC9E61exQinqbfhpW4WStlwB8BPk1NNZCgZZ3SY2kBtjX1ZXGLZeveiCq723CFZ84X8bbMpxTgoh34P7h2DSUKbFFRKOt4JdIvZtaudMhrupYjw_k8ZA)
+![](https://lh4.googleusercontent.com/c78iFO4INB4JO4_ZQIzPpVLBDvbZX205BdXDKqkKPta1XJkP2XWeCN6JNEuABoWrBg6qBOIWTciXUMy-uJlkAGKLk_e_3WZnPibmno-3y50kX2FFpaI5H3wtANv-PvrmkAkza8pL2Xh3tAnEAw)
 
-![](https://lh5.googleusercontent.com/lGIaDGcPuGbqkF32K5JFYu7vPseT5x6nlc3uElPKeHg6cN1vaWYbiNygyKA0QKsIVxLZl7lyU8CxtqJB5FhlCy16BZNs-QIeIvvTp-Jz7DmJa_eEa-PGSp3uGrGeG6n49HurIn0RwEcf7LRAkw)
+![](https://lh6.googleusercontent.com/j_jBytxzZJFMym_6bKo4pkoefTfMVmmxtIhkaMHo0F_neB9phMoVQTzbqeALZP0GyDc0KymvX12Atg1MLrwG0nqwgq-Gv5Knzt4hCFhiTNCZ3l6TVjTyd7jI2TnWXCpKI7zAutDeXgzpoQMmcA)
 
-![](https://lh5.googleusercontent.com/mZ6PwiNhQtEpe-C7lnxpSEtUMtXgjnVAy-ktJs7KtS8wReEvzoj5lkeDpVZno5iU_9fIm4tQqgG27Sl82NTMYZM0eqtt6I7rjL1zV5NgTGA11cxA54GijMdNncCXXH3mzkWb0TsoLlIxP7IwDA)
-
-  
-
-Inductive Reasoning:
+![](https://lh6.googleusercontent.com/C58GmT7JidpAYjtyRq0DYL9IqHvBcliynpBK_NyB5o-I1dKzfYqk9bcsZ9SJr1MPealy_zPvw6zfsY2A4EJCiD2Emj9d01Ol_5bHls_jIcYoB-mb4Cd1z2AziPXKkgMtH0IsjMdeHHwCZeP2Kw)
 
   
 
-What are they?
+## Inductive Reasoning:
+
+  
+
+**What are they?**
 
 Here you will get 2 images and you have to visualize the common trend they are following and after viewing some trends in both of them, you have to tell, which options among the 4 given images follow the same analogy or same trend.
 
   
 
-Way of thinking and dealing such questions?
+**Way of thinking and dealing such questions?**
 
 As you can see, it's looking more like an intuitive problem. You have to fully scan both the images on the left side. Now try to visualise the similarity between both the images. Usually, they might have all the same elements in a row or in a column or in a diagonal etc. So, there are various possibilities of similarity among them but try to find a more intuitive and generalised similarity between the images.
 
@@ -128,11 +128,11 @@ As you can see, it's looking more like an intuitive problem. You have to fully s
 
 Example 1:
 
-![](https://lh3.googleusercontent.com/6Ol8z0uYcz6CW0nyNrzq-NvfItcva-BcHJ6ionfxt5-DS79iQEM16lHCZgTVupRJ-FARqu1e8yg0-SjN4089vyC_6pnGgkUi_udUbZAOEEK8Dm1OKSAJHnsEu6aFsZH9HZbRW-35tIIw5qEAOg)
+![](https://lh5.googleusercontent.com/DVNu4o2BELe8GE3pU1GxbYTBtE-RjxP3DJBkicQHT2Ppwen4WRVeb_0auLvsUbEYuvjqV8jyWWHl-JW1kCm72wiX5PqTTOAqvS5pIzR3-upgTrxmTGddLgYsWebBI07l-zMXdQTvZ4N3cT267w)
 
   
 
-How to approach:
+**How to approach:**
 
 Yes, you are thinking right. You can solve this in two ways:
 
@@ -156,7 +156,7 @@ Now, in the first example, by following strategy 2, we will get the answer as yo
 
   
 
-![](https://lh4.googleusercontent.com/CyC4hlBiUuYpM16QU1sMqTThEq_QvDGqhhMT6l4Ewl8PtMmQ9tt5YT77DHOSIx9rCk_L59RI8LfBDyHuzdsb6xvyemRXMOOMRUaLRFdSmEial163tHMurUC2wi7-Mrk-nHV68xFaIZUo_T95Qw)
+![](https://lh6.googleusercontent.com/b5Jp622YGDzOMVKF-MVsmZbyfo-8ov79O9fmeAtXO8ykuM3zFzs_OTk2igDau0wqtshJKAmiCZWJPh9_imBTdfl4pBSLRaVIjCzi5RJiQBG8mCa1caR8uN_ug03Gu45RnweL7JFO_O9UFjbVXQ)
 
   
 
@@ -165,7 +165,7 @@ Now, in the first example, by following strategy 2, we will get the answer as yo
   
   
 
-Follow on:
+**Follow on:**
 
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
@@ -176,33 +176,33 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
   
   
 
-Follow on Questions:
+**Follow on Questions**
 
   
 
-![](https://lh5.googleusercontent.com/iQ0BrOrpMrV4SNI42NKa-2SaZeBjHEvFdD8NYLaXRp0R0pbOytpGr8YnPa8MU3cZXQFb-pGs_-N5vuJlflGxJZCw_0cg8GMUq0c0lGM4acuO_84on2j8FHjuGyHfo03QAXGKti5zzEWSIzCw9w)
+![](https://lh5.googleusercontent.com/1-sitGY7LlJIz0BuXGHjW1HBOaM5o3akRAKRXwBRZpZ6sj8j8PXzVEb9gciB4EpwaxEU_Qx8WVtgCxi2CbjUvOgJFb46bRYSpLtyCYDP1fkywcpT96s14st-dsjjOOGDARNx-Yz_3GtN2Mx_Bg)
 
   
 
-![](https://lh5.googleusercontent.com/y79HiRejouHHlqWf1VMTy8SuQuS0Q3VQue6_pkAwQmGqAo39JHtQX0TFVtOKjJneeZ0gQrnmXFME39tiomsRIM5yLFclBwtyvE4_uTIWjZVWomyUJMjDTsoLHnRVm26G4MnWGxxYHozF1m412A)
+![](https://lh4.googleusercontent.com/6Hdr-UQAGSNoyRn6YXAJYXVWfOGQ3w8e4RP6VJc2QgFqnFpZ4y1SrmQwvSj5IPmaHFxT4BdepqIQdYnJx8au0YXgT2YAaYp-oEJlMXdaxNOQXnE7jBTdCtdOuyFQxkX9J2McfzaAMVhub7rEzg)
 
-![](https://lh4.googleusercontent.com/z2ssz9JuxqRS1aU0Jt6fbjkfOzfMbHcB1xvACt9sWbL0SzR86wHsgC_GZegAkdLSKZxRJeUwRsdbNkLUeBt8L0B4EC7jcwfFoWmMgJMoXtSHLVRHD7x3GEXFgKFoGw4A7hmsHOBrxjaQKXPUmA)
-
-  
-  
-
-Solutions to follow on questions:
-
-  
-
-![](https://lh5.googleusercontent.com/_YtTIwzxk5-Oquxqm1HRcPFFR06jYebV3R5c8U-7i01dsohhhoWYWxFvWbwo0FmsvYUcvo2oXrZ2uUzOlAjO2XfB46QmE9-IqAhs3X88u9A-AUQ8y-xvJYGKPsAxsnGr93EfsHCBzMgGwglmrg)
-
-![](https://lh6.googleusercontent.com/FFXAPwpTWvCQRwimWzOTeo1xsM-iHpi8_EkDx2Q8qwFtzFNWIWepMvt-bulspm08IBGbT0FHdQb5-sv_6MaF_JKbkhVNNIDZj0qXgv_NHuSP2Nn0o6E_ETqWGh8jTXFeJe-PCTcFw2v3Yw5wWA)![A screenshot of a cell phone
-
-Description automatically generated](https://lh3.googleusercontent.com/FQ9Uo0rCGpo2tYMCBWv_ESZdpZi9XwaYNU1djDCZ_DCAR8IB3DowPyhVwtCUpsuS_Xfx6J2m8FEpIONFqL6cIK9AopJrWjdQpG2sogrGD344V449Lzpg9BClPPZeVXzU6c-_lCgA23k028wsNA)
+![](https://lh5.googleusercontent.com/hx1pAwKNGGhd62eNRHaa-M84DZVxUP6IO9_iFrbcWp-ng4QTYz-nhRH_wmOEvYKPwXnlcR4cgKh-4UDmPxHphcoGcPAA5U0mpWFqWj5qcnqSly2HDhv6MuOWcqFHP2Y1F-0RBgbM8StXiBHtWA)
 
   
   
+
+**Solutions to follow on questions:**
+
+  
+
+![](https://lh3.googleusercontent.com/AIq0qL-ef-La-AqlRNLf5-WvEdN_gxU4jWQxvdjuSLQTWeJrd2k7AoHiEuLENacToNhpWITqUsbtmFfVwFcChDtfMmyUXXaNranMwYag-5oo7fuSKAYUyNYQBdhal3xO3sRFdfGmn49fPT7A4Q)
+
+![](https://lh4.googleusercontent.com/4vAOgFrbAmaBM-2leHJrP-zcllt1T-UBvQJTvDkLdXlxjwtDhwJfHVTMmYcu7ErnRatyeGO3HYMEGQCuWkVjGIKz9HO3-69yr14S__jL3MN4oVa4BfFxIrFtbNgCkzcvG0JwuOVSVXUpNcu2pw)![A screenshot of a cell phone
+
+Description automatically generated](https://lh6.googleusercontent.com/VivsihGWuZN8DwCqHDLcGf8y5qELmMcVEKnDYFDpkX4JDmuCjTL-VbFtnvN5TRc2wXoRlEhykJRed9xpJS2dHGedi7565adcg19XZKBRp633cRwjjMEpKwqdCBVk_3Idz8UFe-lVtCkGDPZZgA)
+
+  
+  
   
   
   
@@ -225,17 +225,17 @@ Description automatically generated](https://lh3.googleusercontent.com/FQ9Uo0rCG
   
   
 
-Paper cutting:
+## Paper cutting:
 
   
 
-What are they?
+**What are they?**
 
 These are the various steps followed up to fold a paper and to get a final image(last image). Now, you have to predict the initial paper among the given options, which on folding gives the same output.
 
   
 
-Way of thinking and dealing with such questions?
+**Way of thinking and dealing with such questions?**
 
 As, you can see, it's looking more like a pattern based problem. This problem will teach you how, a complex question can be solved by just few minute observations. Among all options, you will see a square try to predict is the pattern on paper and on final image somehow same or not. And try to analyse its folding in mind.
 
@@ -243,11 +243,11 @@ As, you can see, it's looking more like a pattern based problem. This problem wi
 
 Example 1:
 
-![](https://lh5.googleusercontent.com/aD2xw00RCnXO27I0z_ZvPZWqGhpJaFwI1R41ZUhsyYkg93y6BR6wm4grQv-tbn5KltULNHt20iaN8UffiGm_Fvfsxxtb3h6FHz1Liatm0Go5xk4AwFM6_mNIc-E9Il9juwJ7Jp-3dyeVjblDMg)
+![](https://lh5.googleusercontent.com/eeKEY0mRCqDEvIjA46WfWakZyHND_O75igU6mNHzBN-GZ_hMroxN6nJDpNJgq_z6wxMYq091olLpa0gI-8iQ8mMrjbC6kdJvNjujaELPiDui-PtAy-bOSGpDVYdpGvUxnjFBGMT-LcFaU_x8Jw)
 
   
 
-How to approach:
+**How to approach:**
 
 Yes, you are thinking right. The best way to solve this question is to take in the consideration the right most half of square and just see if you cut the right half of paper from middle (half), will it be the same as the final output or not. Yes, that’s it. This will give you the correct answer.
 
@@ -259,37 +259,37 @@ Lets see in example 1, and consider only the right half of the paper and visuali
 
   
 
-Follow on:
+**Follow on:**
 
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
   
 
-Follow on Questions and answers:
+**Follow on Questions and answers:**
 
   
 
-![](https://lh5.googleusercontent.com/Ks2urU1-T9LYL8HBf4mir7c32nfQpEjZBGwBTH4YKs6l_5eaIJqCAqUwVF6tedBJpOM77wbPA0BobF6kR_-QtJLJ3fz9BDIi0t4k6vS65UUMjn6ctW8ZX-Kzm0Yu3oGFBC5ljZj8DftXhI50Kg)
+![](https://lh6.googleusercontent.com/Wlg1ou1gRAL2INKeJ03GRtWIbh9p-ssOt2osf8koqCpbpg37nFbDId-R5hkPmaCIfo9LwPmcSYy_0XyyUfA9OlLs_2WITlZZHuKBDh_jbsABz6PhaXLRKVnqzaqF7ZSLrf62YWn4OMHiD0suLw)
 
-![](https://lh3.googleusercontent.com/yDyUzj_0xo_pvf5zG8PRlaqaKKLwjNtLk2Ep1jgU6K6-AOvgB6cVjRtk_dEWD2WnxlLAqaP-tSbvJk6zzhiS7RCEcLQDB9q7ACvLdZNDQNryKObtMJCqweevNFZB1D2FRXQtXHxDaB_1FUkffA)
+![](https://lh5.googleusercontent.com/6zYaV0UQ9icopBw--z2fpPZjMfkJlpnu8T6FXYFfyJse8MXQu4XFqbIkytweQJU0pIYRaBO7zMYcfkKYpLar0D7SpJ8mtr8251eoAjRDUlYgEOaL5EgeKCweooPtjVCBQE6kc3pnr3-lAhF2VQ)
 
-![](https://lh4.googleusercontent.com/aV06xwrplzX1MBByIqZvFYgTjECR5UGq8FW84TKbg3KYOFYXj4ogtukjVVmYDEjRFzF6HkwGUzrLf4nYue_w49TZy0l02YshkbCEdlpMiGKRm88EDzpxJeyOa_65VV9lEJqiGLwPlYjCrR5Xag)
-
-  
-  
-  
-  
-  
-  
-  
-  
-  
-
-End of lesson assessment
+![](https://lh3.googleusercontent.com/fzo9y-s_gpQj294hWkiT5Zn-BYGzQdROnUHvOsila2XYUtwFcuGdeJhtVSYKOqU76-EnhLtVn1Ple1LnwobeK7-kJLJgMP0FpzwMmCgtJixu2ATzCKSClxldoXoZOkJPLb56YfAh4QT2E6vGdQ)
 
   
-![](https://lh4.googleusercontent.com/C9BR8cfFy0hJyTXSO5bGv0WcPy4H16vl-dYRDD7vCm8NkDMI0Wim2eGVa4trvxbM0SjCYIWeXPkWG0RJa6RyUaOJwlKCNZsaJYR79UoRyn7CGxOMYdDN4dgt7Z3ywLRmf0paxLBwsqedejA44Hc)
+  
+  
+  
+  
+  
+  
+  
+  
+
+## End of lesson assessment
+
+  
+![](https://lh5.googleusercontent.com/xLasnL2goTF9iTdtkKyhS0cPO93m8UFx4AZEkyEHsLI_4chwr3NCxlhtDT_ea6BNFMHPhINg5Utri4KfoC-HBFFsWKSSeODIl3g4Np9ov8XnnI3oZJRQVmMgjBFrvfsdG4U5tmYcfzG8Ob9ZYek)
 
 1.    
     
@@ -297,7 +297,7 @@ End of lesson assessment
   
   
 
-![](https://lh6.googleusercontent.com/PN6vllyJlB6cfSBBsDC9ApTdZ5YYAkGxdZEweXbc4K7Q-EqAD-3XSum250FNS6d-SFraNrENAep229z2xqtajKtQAtFW_RoJXAg8l5jKcShB5LXGWreGYS4Sgp02MVWh3FWFzunxyGpJm-FD8gY)![](https://lh4.googleusercontent.com/1COmD2U3eR1ZB4Loy4XwJUA16YRY4-nwJygbxipu4FCFe_Ji6rGqe2a96N9Yf5xRcA2oOJaPmqs9-5ludMa5CD_6M1yPtodu49rxJImH74dewHXnOqHA0VqwBGLKoWqwtqjo72HAKyvY9-uLGQQ)
+![](https://lh4.googleusercontent.com/bXJe_nm60NtWrGdkliSSeBV3JH7lzkpDd_xEGhrn_ypseRBaPkJMrduqeL9jpf5L2WlN6NAc_sUYGur-RDZdrTSExjHdzkAVWKsKvXTzCfSKHfEjaybBil3PwAcoSGHdHfC1J1LY4W0FX0erzMI)![](https://lh5.googleusercontent.com/qJ49MSYifjJFJBpbYffJ_VVIrO8BOtzoZi3uy1Vn7j3LDjKg4YUZV8eLuSZjn1I4VqagXvQ-gMRsppG5yB7yuSpXp0xpb6iyw5qV8Y0YzlVqMjumCyOcYUcpoLOaune_kp1xmZ1US5epCj0dQd0)
 
   
 
@@ -313,11 +313,11 @@ End of lesson assessment
   
   
 
-![](https://lh3.googleusercontent.com/zWIAYw35Ce5DpV21RKaMsSJdq7U1fZ0emqNsJeGOuVTUF11VvDEFhOJM9tdEzaDrUM8TQZCO_fby9n_Xitm3__BJgjfUwsk4hkTBF_2APYxAQNmJLuBfcTAek0ofeSw3t129wPdy8FpKhls0v6Q)
+![](https://lh5.googleusercontent.com/CzPLOWOhXG581z4e6EyzDDPxumrpE5iEDkp8iE34WvomEOzUR5mJV65vbvI9yHqMjapjCGW5RYSBtI1CYeeCwrtGN0Xi6vn7pMmZHs9ynw8AkAkTmuyNtrEbT_I73dUWfDQOubiZv86bAj-bX2M)
 
   
 
-3. ![](https://lh6.googleusercontent.com/Xn4D4PRI_F8EPqIpRhJB1BEqLZ8iSojGRQ-FcnT2lpneidv8gmlX0KZs28t9dTwVZJHNz9aozthEMbXAAS5cfLCQQIOdNuM5w3mnIE6fv5_Ayl_HpQkwbA8jL3Zr-KNwHpKQ1-mRViQqrxz08WA)
+3. ![](https://lh3.googleusercontent.com/nPLYfl50jiPv5LxC9S2zHmHlkX9_nxr9JSPiVT8HRlJ-NjOgFzQ6GJzsWtoj2-nICJIIWzmYIlO2AV17lpup1R8fuCTU-zZuJOUCVFSMaywTgemg9NzHYxfkHiZRShAhEBOTMM7QaeYnJ5K05_w)
 
   
   
