--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -4,7 +4,7 @@
 
 We already covered 3 different types of puzzles in the previous lesson of thinking with numbers. This lesson will be the continuation of the previous lecture and we will discuss some more puzzles in this lecture. So, this will also be a fun lesson like the previous one.
 
-# Takeaways from the previous lesson(explain in detail)
+# Takeaways from the previous lesson
 
 The most important takeaways from the previous lesson were:
 
@@ -17,7 +17,7 @@ The most important takeaways from the previous lesson were:
 
 # Introduction to the Lesson
 
-Today, we will be solving some number puzzles which will mainly focus on your ability to guess the possible permutations and combinations of digits that can form the solutions to these problems.
+Today, we will be solving some **number puzzles** which will mainly focus on your ability to guess the possible permutations and combinations of digits that can form the solutions to these problems.
 
   
 
@@ -94,11 +94,11 @@ Some important factors that can be applied in these problems (not specific to th
   
   
 
-Let’s discuss the sample problem we have taken, we can see that we have to use all the six digits provided to solve the problem. Then, we can try to brainstorm some combinations, since the RHS will of course be the largest term of the three. I put a 9 there just to observe other possibilities. Then, we can try using the other digits as the second digit with 9 in RHS. First, we try to put 0 with 9 to get 90. Now, check if we can form 90 with 2 numbers made from the digits 1, 2, 7, 8.
+> Let’s discuss the sample problem we have taken, we can see that we have to use all the six digits provided to solve the problem. Then, we can try to brainstorm some combinations, since the RHS will of course be the largest term of the three. I put a 9 there just to observe other possibilities. Then, we can try using the other digits as the second digit with 9 in RHS. First, we try to put 0 with 9 to get 90. Now, check if we can form 90 with 2 numbers made from the digits 1, 2, 7, 8.
 
 If you observe closely, you can see a possibility….
 
-Yes, you are correct we can use 78 and 12, and 78 + 12 = 90
+Yes, we can use 78 and 12, and 78 + 12 = 90
 
 So, our problem is solved.
 
@@ -110,7 +110,7 @@ So, our problem is solved.
 
   
 
--— The solution is 7 9 + 0 2 = 8 1 —-
+> __The solution is 7 9 + 0 2 = 8 1__
 
   
 
@@ -146,7 +146,12 @@ You can try to solve some other problems involving other arithmetic operations a
   
   
 
-**Solution: ( 4 / 2 ) + 6 + 7 = 1 5**
+<details>
+  <summary>Check the solution!</summary>
+  
+  ( 4 / 2 ) + 6 + 7 = 1 5
+  
+</details>
 
 2.  Correct the equation given only using the digits given:
     
@@ -167,8 +172,13 @@ You can try to solve some other problems involving other arithmetic operations a
   
   
   
+<details>
+  <summary>Check the solution!</summary>
+  
+  ( 3 / 4 ) x 2 x 6 = 9
+  
+</details>
 
-**Solution: ( 3 / 4 ) x 2 x 6 = 9**
 
   
   
@@ -206,17 +216,17 @@ We will take the following sample problem for better understanding:
 
   
   
-![](https://lh6.googleusercontent.com/xyiC3_-LDiJFB2nMWfrac9e9rbKKrgLKS3sZ9gpRfPpemLKQHHEEfL4Gu4VPEsu3ec-5vF9hlRR-vZ0SWVyKVzqJv16FHYEYrXO26nQwC_ixABPTGNyJvYq84VvblYhab-INq5LLTcNguG4T6A)![](https://lh4.googleusercontent.com/lw4QmgCJpjcvxJfMs7o8hDHagMFpbjvkOS5ISK2xjXvw_-v4H5wJCmG6u7Z5ycyb4LHv4ZdCe0eXXyw24HRKgLefcOyA5VSmyvgoaH8i9DL5fPao7mhb-K3j9k3oK2pkX5PRMVX8-oxH1IL0eg)  
+![](https://lh6.googleusercontent.com/xyiC3_-LDiJFB2nMWfrac9e9rbKKrgLKS3sZ9gpRfPpemLKQHHEEfL4Gu4VPEsu3ec-5vF9hlRR-vZ0SWVyKVzqJv16FHYEYrXO26nQwC_ixABPTGNyJvYq84VvblYhab-INq5LLTcNguG4T6A)   ![](https://lh4.googleusercontent.com/lw4QmgCJpjcvxJfMs7o8hDHagMFpbjvkOS5ISK2xjXvw_-v4H5wJCmG6u7Z5ycyb4LHv4ZdCe0eXXyw24HRKgLefcOyA5VSmyvgoaH8i9DL5fPao7mhb-K3j9k3oK2pkX5PRMVX8-oxH1IL0eg)
 
-Two numbers are correct and well placed
-
-  
-
-Two numbers are correct but wrongly placed
+- Two numbers are correct and well placed
 
   
 
-Nothing is correct
+- Two numbers are correct but wrongly placed
+
+  
+
+- Nothing is correct
 
   
   
@@ -233,25 +243,19 @@ So, we have been given three incorrect combinations for the lock. You will use t
 
 **Using the 1st combination**
 
-In the first code, we can see that it has been specified that two numbers are correct and they are in their correct positions as well. So, one of the pairs out of 1,6; 1,5; 6,5 are correct and the digits in that pair are in their correct spot as well.
+>In the first code, we can see that it has been specified that two numbers are correct and they are in their correct positions as well. So, one of the pairs out of 1,6; 1,5; 6,5 are correct and the digits in that pair are in their correct spot as well.
 
   
 
 **Using the 3rd combination**
 
-At the same time, we can also check out the last combination to see what’s not possible and then use that information to cancel out the digit that is wrong. We observe that the numbers 2,6 and 4 cannot be in the code. So, we can further eliminate two of the pairs which we considered earlier because they contain 6.
-
-So, the number 1 & 5 in the 1st combination are correctly placed in their spots.
-
-Now, we only need to find the middle digit.
+>At the same time, we can also check out the last combination to see what’s not possible and then use that information to cancel out the digit that is wrong. We observe that the numbers 2,6 and 4 cannot be in the code. So, we can further eliminate two of the pairs which we considered earlier because they contain 6. So, the number 1 & 5 in the 1st combination are correctly placed in their spots. Now, we only need to find the middle digit.
 
   
 
 **Using the 2nd combination**
 
-In the 2nd combination, we observe that two numbers are correct but they are at incorrect positions. We surely know that one of those numbers is 5. So, the middle digit can be 3 or 8.
-
-If you inspect a bit more, you will notice that 3 cannot be that number because it has been stated that the correct digit is at an incorrect position but looking at 3 it is in the middle (which is the correct position according to our observations). Hence, the middle digit is 8 and congratulations you’ve cracked the code.
+>In the 2nd combination, we observe that two numbers are correct but they are at incorrect positions. We surely know that one of those numbers is 5. So, the middle digit can be 3 or 8. If you inspect a bit more, you will notice that 3 cannot be that number because it has been stated that the correct digit is at an incorrect position but looking at 3 it is in the middle (which is the correct position according to our observations). Hence, the middle digit is 8 and congratulations you’ve cracked the code.
 
   
 
@@ -280,8 +284,13 @@ If you feel 3-digit codewords are easy for you, try giving the 4-digit one a try
 
 1.  Find the 3-digit code using these hints provided
     
+<details>
+  <summary>Check the solution!</summary>
 
-**Solution: 4 6 1**![](https://lh3.googleusercontent.com/N8J6xMaRrpjSL1ik_NaSsxs5mgAOvzr1EZ-L0ulKwvbUKWZVp-ws-wcg5tC-7fYKOvtzxx-j4nXNJue05WrAFqjMgjWwgzmvU-vU4UTC9SDCJb-KMgrZUJRFHUJQunRc-OBxZyTqO-mUJSDT6Q)
+  Solution: 4 6 1
+  <center>![](https://lh3.googleusercontent.com/N8J6xMaRrpjSL1ik_NaSsxs5mgAOvzr1EZ-L0ulKwvbUKWZVp-ws-wcg5tC-7fYKOvtzxx-j4nXNJue05WrAFqjMgjWwgzmvU-vU4UTC9SDCJb-KMgrZUJRFHUJQunRc-OBxZyTqO-mUJSDT6Q) </center>
+
+</details>
 
 2.  Find the 4-digit code using the hints provided
     
@@ -289,7 +298,13 @@ If you feel 3-digit codewords are easy for you, try giving the 4-digit one a try
   
 ![](https://lh3.googleusercontent.com/OB1fXYseJjGp2cr-C43YpBIV_UB4MTwp94ZDKoffwRV4RWxdSVR5ApPfi5uivPnanWsJuknPTsD2P3q4ffifbRCf_2kbKhgqqOL-GvL2GpS_y4zravgzdmWJj38SnozrTcahAxUvaq4RDgE43g)
 
-**Solution: 3 8 4 1**
+<details>
+  <summary>Check the solution!</summary>
+  
+  Solution: 3 8 4 1
+  
+</details>
+
 
   
   
