--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/02-Thinking-with-numbers.mdx
@@ -1,4 +1,5 @@
-# Thinking with Numbers - Part 1
+# Thinking with Numbers
+
 ## Objective
 In this lesson, you will learn  how you should approach programming problems. We will try to understand the thinking process that is involved in approaching programming problems by building an analogy with numbers and observations related to numbers.
 ## Why to think with numbers?
@@ -16,3 +17,56 @@ This will be a fun and playful lesson and you will be guided through the thought
 2. Number Series
 3. KenKen Puzzles
 
+### MATCH STICK MAGIC
+We will be looking at some mathematical equations and geometrical shapes made from matchsticks(which are nothing but straight lines of the same length). Let's consider the following problem statement:
+
+**Problem Statement:** Correct the equation by rearranging exactly two matchsticks
+![image](/Problem-Solving/PS0002_img1.png)
+
+**Ways of thinking and dealing with such problems**
+
+The way to approach these types of problems is to just observe the structure of the shapes included and try using the information you just gathered in multiple places until a solution clicks. The trick here is the speed with which you can observe and that will just come from practice and forcing your brain to think.
+
+**How to approach**
+Let us consider this arrangement of matchsticks, as you can see that the equation specified in the pattern is wrong.
+9 times 4 is 36 but the answer depicted is 46.
+
+>Now, the first thing that might come to mind is can we rearrange the 4 in RHS to make it 3 somehow by moving 2 sticks because that will make it 36. But, on further inspection we see that to formulate 3 we would need at least 5 sticks but the 4 in RHS has only 4 sticks, and we also can’t take a stick from the other digits because then it would change the equation.
+
+>>Then, we can also observe that 46 does not appear in the tables of any of the 1 digit numbers from 1 to 9(Pause and try determining why?). If you were able to determine the reason for the above statement, excellent. If you were not, we are here to discuss just that, now because we are dealing with multiplication, we have to broaden our mind and think in terms of numbers(factors, multiples, etc.). 
+
+_Possible pairs of numbers that multiply to the number 46:_ 
+![image](/Problem-Solving/PS0002_img2.png)
+
+46 does not appear in the tables of any 1 digit number because we can observe that 1, 2, 23, 43 are the factors of 46. So, we can conclude that we surely would have to change the RHS for this to be correct.
+
+Let’s explore more,
+- One option that comes to mind is removing a stick from 6 and making it 5(RHS = 45). Now we would need a 5 * 9 in LHS
+- We already have 9
+- Can we change the 4 to 5 somehow by using the stick from RHS, upon inspection yes we can.
+
+
+This way, the output will be as shown below
+![image](/Problem-Solving/PS0002_img3.png)
+
+
+**Follow Up**
+You can try to identify the solution to some example problems that I am providing. Remember that the problems similar to the coding problems you will face later do not have a single pre-defined algorithm to find their solution. Your job is to find a solution by taking inspiration from the methodologies we discussed above.
+
+**Question 1:** In the following figure, remove 3 sticks to leave 3 squares
+![image](/Problem-Solving/PS0002_img4.png)
+
+[Check the solution!](/Problem-Solving/PS0002_img5.png)
+
+**Question 2:** In the following figure, remove 3 sticks to leave 5 squares
+![image](/Problem-Solving/PS0002_img4.png)
+
+[Check the solution!](/Problem-Solving/PS0002_img6.png)
+
+**Question 3:** In the following figure, Move 1 stick to correct the equation
+![image](/Problem-Solving/PS0002_img7.png)
+
+[Check the solution!](/Problem-Solving/PS0002_img8.png)
+
+
+`Under the hood` :bulb:
