--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/03-Thinking-with-numbers-part2.mdx
@@ -48,8 +48,7 @@ We will be looking at some fill in the blanks type puzzles here. The puzzle will
 **Problem Statement**: Correct the equation given only using the digits given
 
   
-![](https://lh4.googleusercontent.com/txaWFjKVDgBZb4-1yldLDYnmuO7Y_VTE8TuUc6R3-FkYOpoy1ozwdmt5a_3BZyvbHo-SE1vw6Kc886qi3hByISkbzguH2ZWVimAg1SoleOvGKwPpqF-1MzUrkRZrFkH0Ns39i6CCJ1qmriEjww)  
-  
+![image](/Problem-Solving/image1.png)
   
   
   
@@ -126,10 +125,7 @@ You can try to solve some other problems involving other arithmetic operations a
 1.  Correct the equation given only using the digits given:
     
 
-  
-![](https://lh5.googleusercontent.com/W-2DqH4kNxemSuNxVmq0oRW0vxC4j5BAuAdLVilFRhcYV2Sem1PDmGE28Onm_CdJ8ZxGTGxhX9YccSmxZ5anRnL4w8kXIV8V6H9tDSf6NvUQ5n2A8czzrxKhKiR3L117068kqNE2piS54EDYzg)  
-  
-  
+![image](/Problem-Solving/image2.png)
   
   
   
@@ -157,9 +153,7 @@ You can try to solve some other problems involving other arithmetic operations a
     
 
   
-![](https://lh5.googleusercontent.com/oYnUOegBzB2uq06e1N2SkVVG4Z5Rbl8_LL-hl2sQVCtADjkWEA2kjtWulUOs0CNB8grZagKDVWoGQO6zoBHo_T43iL18hep7noGpSLtvp0C99sppgU3bHXJa8-W5tC4SIKzG0WjWfA255FbHuQ)  
-  
-  
+![image](/Problem-Solving/image3.png)
   
   
   
@@ -214,20 +208,22 @@ We will be looking at some fill in the blanks type puzzles here as well. This wi
 
 We will take the following sample problem for better understanding:
 
-  
-  
-![](https://lh6.googleusercontent.com/xyiC3_-LDiJFB2nMWfrac9e9rbKKrgLKS3sZ9gpRfPpemLKQHHEEfL4Gu4VPEsu3ec-5vF9hlRR-vZ0SWVyKVzqJv16FHYEYrXO26nQwC_ixABPTGNyJvYq84VvblYhab-INq5LLTcNguG4T6A)   ![](https://lh4.googleusercontent.com/lw4QmgCJpjcvxJfMs7o8hDHagMFpbjvkOS5ISK2xjXvw_-v4H5wJCmG6u7Z5ycyb4LHv4ZdCe0eXXyw24HRKgLefcOyA5VSmyvgoaH8i9DL5fPao7mhb-K3j9k3oK2pkX5PRMVX8-oxH1IL0eg)
+   
+![image](/Problem-Solving/image4.png)
+- For this the three incorrect possible combinations are:
 
-- Two numbers are correct and well placed
-
-  
-
-- Two numbers are correct but wrongly placed
+![image](/Problem-Solving/image5.png)
+- You can see in the first row two numbers are correct and well placed
 
   
 
-- Nothing is correct
+- You can see in the second row two numbers are correct but wrongly placed
 
+  
+
+- You can see in the Third row Nothing is correct
+
+  
   
   
   
@@ -283,20 +279,20 @@ If you feel 3-digit codewords are easy for you, try giving the 4-digit one a try
   
 
 1.  Find the 3-digit code using these hints provided
+
+![image](/Problem-Solving/image6.png)
     
 <details>
   <summary>Check the solution!</summary>
 
   Solution: 4 6 1
-  <center>![](https://lh3.googleusercontent.com/N8J6xMaRrpjSL1ik_NaSsxs5mgAOvzr1EZ-L0ulKwvbUKWZVp-ws-wcg5tC-7fYKOvtzxx-j4nXNJue05WrAFqjMgjWwgzmvU-vU4UTC9SDCJb-KMgrZUJRFHUJQunRc-OBxZyTqO-mUJSDT6Q) </center>
-
+  
 </details>
 
 2.  Find the 4-digit code using the hints provided
     
 
-  
-![](https://lh3.googleusercontent.com/OB1fXYseJjGp2cr-C43YpBIV_UB4MTwp94ZDKoffwRV4RWxdSVR5ApPfi5uivPnanWsJuknPTsD2P3q4ffifbRCf_2kbKhgqqOL-GvL2GpS_y4zravgzdmWJj38SnozrTcahAxUvaq4RDgE43g)
+![image](/Problem-Solving/image7.png)
 
 <details>
   <summary>Check the solution!</summary>
@@ -335,8 +331,8 @@ Kakuro is a logic puzzle that is often referred to as a **mathematical version o
 
   
 
-**Problem Statement**: Fill in the empty cells in the given grid using the instructions below:![](https://lh6.googleusercontent.com/T5NBaANUIQ62uERLViawQ_LL-KD5ItGAn6msFB7PxGVHbs3722AzVIAEPOCpHYcSXATGn7x78D9Un4hfctLC7CghdGYFNR2FsFyyp3Og0op5o_-IV_He0RQCYbhk-XkjvlePxcxaI_p1zYGHUg)
-
+**Problem Statement**: Fill in the empty cells in the given grid using the instructions below:
+![image](/Problem-Solving/image8.png)
   
   
   
@@ -374,8 +370,9 @@ The filled cells contain a diagonal slash which divides them into two halves, an
 
 Let us now try to solve the sample puzzle we have taken. Here, first of all you can observe that there are a total of 4 rows and 4 columns. Now, to start filling the cells, you should consider the rows that have only one possible combination to fill them. For example, the first row requires a sum of 3 from two cells which is only possible with the numbers 1 and 2.
 
-Now, we have to decide the order in which these numbers will be inserted into the cells. To decide that, consider other trivial columns like the right-most column which requires 2 cells to fill up to 4 and the only possible pair of digits that can be used are 1 and 3. Because the digits cannot repeat in their row and column. You must’ve guessed the correct order for topmost row and rightmost column i.e. 2, 1 and 1, 3 respectively.![](https://lh5.googleusercontent.com/tPC2CFw38inV6hDrb2P2W-yB8ZDHn9y77FozdROuj6rFjKunr5ZxRmydWiG35v1CQh5pXGGqqGqckvzXe9Bvos8VwmAAA3gM-A6EY9t0PN34yEWrg6LdF36eQdsZvyOjXLq4HzC_qq7NSMyk2w)
+Now, we have to decide the order in which these numbers will be inserted into the cells. To decide that, consider other trivial columns like the right-most column which requires 2 cells to fill up to 4 and the only possible pair of digits that can be used are 1 and 3. Because the digits cannot repeat in their row and column. You must’ve guessed the correct order for topmost row and rightmost column i.e. 2, 1 and 1, 3 respectively.
 
+![image](/Problem-Solving/image9.png)
   
   
   
@@ -389,8 +386,9 @@ Now, we have to decide the order in which these numbers will be inserted into th
   
   
 
-Now, let's consider the second row(with clue 6), we see that the two empty cells can only be filled with1 and 2. To decide the order, we look at the second-last column (with clue 6), it already has a 2, so the cells will be filled as shown:![](https://lh4.googleusercontent.com/_HGrj5oLyW12C4oNi7b0TQBCjbmR_cHnTSTNtceeKDtaLI7Q_6OPFW6yS35Yw9QQEsYdJHkslSQbOv61VSEwMWU4EDb3IAvLHBL0NkQyj9PwnCOo386H2gx2mX60a3sfI4zfom-t5-Dtn7Da9g)
+Now, let's consider the second row(with clue 6), we see that the two empty cells can only be filled with1 and 2. To decide the order, we look at the second-last column (with clue 6), it already has a 2, so the cells will be filled as shown:
 
+![image](/Problem-Solving/image10.png)
   
   
   
@@ -401,11 +399,11 @@ Now, let's consider the second row(with clue 6), we see that the two empty cells
   
   
   
-  
-![](https://lh6.googleusercontent.com/WCLDJwse1XMvJn9D7dgRHiYb_TGdnVF2-3Oq5byIXWV2N1G0NyffPasxXx3UJBAC6dZFoz4D0ilzGNh1o9o1Ruw0d_Lp3rzbtTAv91NDWb0wG8YOspwZW9uL1ZCkipbXpIyHUEoaxOytSXO9lA)
+
 
 Similarly, the other cells can be filled as follows:
 
+![image](/Problem-Solving/image11.png)
   
   
   
@@ -419,8 +417,9 @@ You can try to solve more difficult versions of Kakuro with 6*6 grids, 7*7 grids
   
   
 
-Solve this Kakuro puzzle:![](https://lh5.googleusercontent.com/1DgDmMEL44nfic7ZJyVOPwxk1X0-JI2fAlWd2GuLWwT5ElknGiJDW0Wzc22pdwdfhMYIgR3m2KaxIu01Zr3NM3sVR5BwPw7-FNLvTfb1FX9e7ceHnGx-EPIjIsZW7gfOVngob0aIHqyRDPFy8w)
+Solve this Kakuro puzzle:
 
+![image](/Problem-Solving/image12.png)
   
   
   
@@ -466,8 +465,7 @@ Solve this Kakuro puzzle:![](https://lh5.googleusercontent.com/1DgDmMEL44nfic7ZJ
 Q1: What will come in place of the question mark in the given Kakuro puzzle:
 
   
-![](https://lh6.googleusercontent.com/25IDLuVQ-mSd4IWO3_tJZAILkY8k8j3qC6aagkb2-o3QbRc6sV6Arg_cII4b1ANbFkvanyVnSVvm5lIKjmqkxxSlVTFMbo3AU6DfSZvVnebacnlCzHnjSgK8iyhqY5y2v7JUqAzpU5b839oNEg)
-
+![image](/Problem-Solving/image13.png)
 1.  8
     
 2.  7
@@ -486,7 +484,7 @@ Q1: What will come in place of the question mark in the given Kakuro puzzle:
 Q2: What will be the middle digit of a 3-digit code with the given clues:
 
   
-![](https://lh5.googleusercontent.com/Sk_vPqOyv_V7h1G5fOkbka20-F_IzwDw2eO0ra0Aszg2xgsIfm9uZT1bCldIeCI1AfiNGhXOqmvpHWDUX7zMKQv40SKBpVaf1GZ3riH91UmapIWYerln4966PzA0B4Rn6YVmgoQR4xcTCNm26w)
+![image](/Problem-Solving/image14.png)
 
 1.  4
     
@@ -507,8 +505,7 @@ Q2: What will be the middle digit of a 3-digit code with the given clues:
 Q3: What numbers can you fill in the blanks to correct the equation:
 
   
-![](https://lh6.googleusercontent.com/8AMggQIdzA41ujmGz1AfXuqYABzBAA7rpf5mOSxjbLtHa5OOWXrw2747frvv1Pqrgz3MRMnFv3nrrpvPKBLVmOeDaQZFh9jYH1AhxO-km5AT7hgIzRxX87pIcpnFXwxfCUUiCoDfofyAGURm3Q)  
-  
+![image](/Problem-Solving/image15.png) 
   
 
 1.  4 and 6 [✔]
