--- a/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
+++ b/Semester-1/docs/Problem-solving-using-Programming/Solving-problems-&-Writing-Algorithms/05-Thinking-with-visuals-part2.mdx
@@ -2,7 +2,7 @@
 
   
 
-## Lesson Objective:
+## Lesson Objective
 
 In this lesson you will learn how to solve various visual and thinking question with logical analysis and thinking
 
@@ -16,7 +16,7 @@ The way you will use to solve such questions, will enhance your thinking and wil
 
   
 
-## About the lesson:
+## About the lesson
 
   
 
@@ -38,7 +38,7 @@ Here, basically we will be dealing with various types of visual, logical and rea
   
   
 
-## Missing Terms:
+## Missing Terms
 
   
 
@@ -60,7 +60,7 @@ As you can see, it's looking more like a hight level thinking and visualisation 
 
   
 
-**How to approach:**
+**How to approach**
 
 Yes, you are thinking right. Just follow the steps followed in given part of the image blindly and you will get the correct answer. Let's discuss example 1, here you can see that we have 3 rows and 3 columns and the right-bottom most cell is missing from it and we have to predict that. So, try to see in the first 2 rows, what are they doing. What they are doing is, if they have something in common, they are removing that and if they have something different they are adding that in the final output. Or another way to visualise this is just remove the overlapping part from both of the figures and you will get the correct final output.
 
@@ -80,7 +80,6 @@ Yes, you are thinking right. Just follow the steps followed in given part of the
 Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
-
 **Follow on questions:**
 
   
@@ -122,7 +121,7 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
 
   
 
-## Colouring Patterns:
+## Colouring Patterns
 
 **What are they?**
 
@@ -143,9 +142,9 @@ As you can see, it's looking more like a conditional based question asking you t
   
   
 
-**How to approach:**
+**How to approach**
 
-Yes, you are thinking right. Just note down various conditions the image has for similar colours. Lets dry run this idea, for the first example. Just, visualise the content of the boxes having green colour. You will get to know all those boxes which have numerical values in range 5 to 9 are coloured as green, while those boxes which have numerical values in range 0 to 4 have colour as grey. Now we just noted the conditions on a paper. Now, let's use them to answer queries. 1st box have all numbers in range 5 to 9 so it will be green, 2nd and 3rd box have all numerical values in range 0 to 4 so colour will be grey and in 4th box, numerical values lie in range 5 to 9, so it will be assigned with green colour, and kudos you got the correct answer.
+>Yes, you are thinking right. Just note down various conditions the image has for similar colours. Lets dry run this idea, for the first example. Just, visualise the content of the boxes having green colour. You will get to know all those boxes which have numerical values in range 5 to 9 are coloured as green, while those boxes which have numerical values in range 0 to 4 have colour as grey. Now we just noted the conditions on a paper. Now, let's use them to answer queries. 1st box have all numbers in range 5 to 9 so it will be green, 2nd and 3rd box have all numerical values in range 0 to 4 so colour will be grey and in 4th box, numerical values lie in range 5 to 9, so it will be assigned with green colour, and kudos you got the correct answer.
 
   
 
@@ -159,7 +158,7 @@ Yes, you are thinking right. Just note down various conditions the image has for
 
 **Follow on:**
 
-Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
+>Now try to solve the remaining examples on your own. Hope you got the way to solve such problems and believe me it will help you a lot while solving a coding problem.
 
   
   
@@ -217,7 +216,7 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
   
   
 
-## Logic First, Code next:
+## Logic First, Code next
 
   
 
@@ -238,7 +237,7 @@ The key way to start attempting such questions is to first understand what quest
 
 ![](https://lh4.googleusercontent.com/NBjxH4QpTnjr3YM5nvCDVGUZkwawoF_heWIGJZafwh_E5lQv-9C5RE_ocD55zaswGnbKLGQ455Y_eFkoiJMweDCQnqswynkZ_Bl1f2fNKHMvWmwaUo0aVLeRrVoFim_dtGgAxiTZgqD_Vd0WAQ)
 
-**How to approach:**
+**How to approach**
 
 Now, what we can see here is, the total number of distinct types of seats are 8, means after 8 seats, it will repeat the same pattern again and again. And if it is repeating the same pattern after each leap of 8, can we say that for every possible remainder of (seat no.)/(8), we will get the same output. Yes it is.
 
@@ -263,7 +262,7 @@ Here seat 1 is lower berth so as per our assumption seat (8+1) will also be lowe
 8.  If remainder is 8 it will be side upper
     
 
-(Now, dry run it for seat no. 9,10,11,12,13,14,15,16 , You will get the same output).
+>(Now, dry run it for seat no. 9,10,11,12,13,14,15,16 , You will get the same output).
 
   
 
@@ -271,7 +270,7 @@ Here seat 1 is lower berth so as per our assumption seat (8+1) will also be lowe
 
   
 
-(This problems can give you a feel of competitive programming sort of question, which generally comes in codeforces div 2 A,B).
+>(This problems can give you a feel of competitive programming sort of question, which generally comes in codeforces div 2 A,B).
 
   
 
@@ -302,7 +301,7 @@ Now try to solve the remaining examples on your own. Hope you got the way to sol
 
   
 
-## Goal it:
+## Goal it
 
   
 
@@ -327,7 +326,7 @@ As, you can see, it's looking more like a problem asking you to check various po
 
   
 
-**How to approach:**
+**How to approach**
 
 Yes, you are thinking right. Just think greedly, how can you do that? I had given you some ideas to approach such problems, now it's time to dry run that on the 1st example. Here, the 1st ball is in 1st row and target position is in the last row. Now the ball cannot move down as of now as there is a brown coloured obstacle. So, shift the brown obstacle to the left end and move the ball to coordinate (2,4) and again move the brown block to the top most row. Now, the 2nd row is fully empty, but there is a yellow obstacle in the 3rd row, so shift the yellow obstacle left end and now you can see, we have a clear way to the goal and yes we reached the target.
 
